@@ -23,7 +23,7 @@ IRCK3_earthquake.1 = {
     title = IRCK3_earthquake.1.t
     desc = IRCK3_earthquake.1.desc
     picture = natural_disaster
-    
+    fire_only_once = yes
     goto_location = p:266 #Rhodos
 
     trigger = {
@@ -39,6 +39,13 @@ IRCK3_earthquake.1 = {
 
     option = {      
         name = IRCK3_earthquake.1.a
+        add_treasury = {
+			subtract = root.has_monthly_income
+			multiply = 4
+		}
+		current_ruler = {
+			add_popularity = popularity_medium
+		}
         p:266 = {
 	    	custom_tooltip = "earthquake_medium.tt"
 			add_province_modifier = {
@@ -53,6 +60,126 @@ IRCK3_earthquake.1 = {
     option = {      
         name = IRCK3_earthquake.1.b
         p:266 = {
+	        custom_tooltip = "earthquake_medium.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_ravaged
+				duration = 2555
+			}
+			hidden_effect = {
+				province_pop_disaster_medium = yes
+			}
+        }
+    }
+}
+
+#60 BC earthquake on Portugal and Galicia coasts; caused a tsunami
+IRCK3_earthquake.2 = {
+    type = country_event
+    title = IRCK3_earthquake.2.t
+    desc = IRCK3_earthquake.2.desc
+    picture = natural_disaster
+    goto_location = random_60bc_earthquake_province
+
+    trigger = {
+    	any_owned_province = {
+    		OR = {
+	    		is_in_area = callaecia_septentrionalis_area
+	    		is_in_area = callaecia_meridionalis_area
+	    		is_in_area = aebocosia_area
+    		}
+	    	is_coastal = yes
+    		NOR = {
+    			province_id = 1136
+    			province_id = 1134
+    			province_id = 1133
+    			province_id = 1132
+    			province_id = 1131
+    			province_id = 1130
+    		}
+    	}
+    	AND = {
+   			current_date >= 694.1.1 #60 BC
+   			current_date < 695.1.1
+    	}
+    }
+
+    immediate = {
+    	random_owned_province = {
+			limit = {
+				OR = {
+		    		is_in_area = callaecia_septentrionalis_area
+		    		is_in_area = callaecia_meridionalis_area
+		    		is_in_area = aebocosia_area
+	    		}
+	    		is_coastal = yes
+	    		NOR = {
+	    			province_id = 1136
+	    			province_id = 1134
+	    			province_id = 1133
+	    			province_id = 1132
+	    			province_id = 1131
+	    			province_id = 1130
+	    		}
+			}
+			save_scope_as = random_60bc_earthquake_province
+		}
+    }
+
+    option = {
+        name = IRCK3_earthquake.2.a
+    	add_treasury = {
+			subtract = root.has_monthly_income
+			multiply = 4
+		}
+		current_ruler = {
+			add_popularity = popularity_medium
+		}
+        every_owned_province = {
+			limit = {
+				OR = {
+		    		is_in_area = callaecia_septentrionalis_area
+		    		is_in_area = callaecia_meridionalis_area
+		    		is_in_area = aebocosia_area
+	    		}
+	    		is_coastal = yes
+	    		NOR = {
+	    			province_id = 1136
+	    			province_id = 1134
+	    			province_id = 1133
+	    			province_id = 1132
+	    			province_id = 1131
+	    			province_id = 1130
+	    		}
+			}
+			custom_tooltip = "earthquake_medium.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_ravaged
+				duration = 730
+			}
+			hidden_effect = {
+				province_pop_disaster_medium = yes
+			}
+		}
+    }
+    option = {      
+        name = IRCK3_earthquake.2.b
+        every_owned_province = {
+			limit = {
+				OR = {
+		    		is_in_area = callaecia_septentrionalis_area
+		    		is_in_area = callaecia_meridionalis_area
+		    		is_in_area = aebocosia_area
+	    		}
+	    		is_coastal = yes
+	    		NOR = {
+	    			province_id = 1136
+	    			province_id = 1134
+	    			province_id = 1133
+	    			province_id = 1132
+	    			province_id = 1131
+	    			province_id = 1130
+	    		}
+			}
 	        custom_tooltip = "earthquake_medium.tt"
 			add_province_modifier = {
 				name = province_diminishment_earthquake_ravaged
