@@ -1,4 +1,4 @@
-﻿- Made republics' elections annual
+- Made republics' elections annual
 - Added a decision to divide the Roman Empire into two halves
 - Added three late-game inventions
 - Replaced vanilla random volcanic eruption events with historical eruptions of Etna in 122 BC and Vesuvius in 79 AD
@@ -7,3 +7,4 @@
 - Added historical minor eruption of Ararat (300 AD)
 - Added historical minor eruption of Methana (230 BC)
 - Added the Rhodes earthquake of 226 BC
+- Added the Portugal and Galicia earthquake of 60 BC that caused a tsunami
